assets/css/style.css
*
{
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: 'Public Sans', sans-serif;  
    font-weight: 400;
}

/*Standards - START*/

.standard_btn
{
    display: flex;
    height: fit-content;
}

.standard_btn_bg, .fill_blank
{
    border-radius: 44px;
    text-decoration: none;
}

.standard_btn_bg
{
    background: linear-gradient(155deg, #33D35E, #2AB6D9);
}

.fill_blank
{
    font-size: 14px;
    font-weight: 700;
    color: #fff;
    padding: 12px 31px 12px 31px;
}

.standard_btn_bg:hover .fill_blank
{
    background-color: rgba(255, 255, 255, 0.4);
}

.standard_width
{
    max-width: 1110px;
    margin: auto;
}

.standard_padding
{
    padding-top: 95px;
    padding-bottom: 95px;
}

.text_style_1
{
    font-size: 18px;
    font-weight: 400;
    color: #9597A5;
    line-height: 28px;
    letter-spacing: -0.28px;
}

.text_style_2
{
    font-size: 16px;
    font-weight: 400;
    color: #9597A5;
    line-height: 26px;
    letter-spacing: -0.25px;
}

.text_style_3
{
    font-size: 10px;
    font-weight: 400;
    color: #9597A5;
    line-height: 18px;
    letter-spacing: -0.16px;

}

.text_style_4
{
    font-size: 13px;
    font-weight: 400;
    color: #9597A5;
    line-height: 18px;
    letter-spacing: -0.2px;
}

.standard_title
{
    font-size: 40px;
    font-weight: 300;
    line-height: 64px;
    margin-bottom: 16px;
    color: #2D314D;
}

/*Standards - END*/
body
{
    background-color: #FAFAFA;
}

.top_container
{
    position: relative;
    z-index: 99;
    width: 100%;
    height: 80px;
    background-color: #fff;
}



.top
{
    height: 100%;
    display: flex;
    align-items: center;
}

.logo
{
    flex: 1;
    display: flex;
    align-items: center;
}

.menu
{
    flex: 1;
    display: flex;
    justify-content: center;
    height: 100%;
}

.request_invite
{
    flex: 1;
    display: flex;
    justify-content: flex-end;
}

.menu nav ul
{
    list-style: none;
    display: flex;
    height: 100%;
}

.menu nav ul li
{

    margin-right: 30px;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
}


.menu nav ul li:nth-last-child(1)
{
    margin-right: 0;
}

.menu nav ul li a
{
    text-decoration: none;
    font-size: 14px;
    font-weight: 400;
    color: #9597A5;
}

.menu nav ul li a:hover + .border_bottom_gradient
{
    visibility: visible;
}

.menu nav ul li a:hover
{
    color: #2D314D;
}

.border_bottom_gradient
{
    height: 4px;
    width: 100%;
    background-image: linear-gradient(155deg, #33D35E, #2AB6D9);
    visibility: hidden;
}

.border_top_blank
{
    height: 4px;
    width: 100%;
}


.intro_bg
{
    z-index: -1;
    width: 100%;
    height: 656px;
    display: flex;
    position: absolute;
}

.intro_bg_left
{
    width: calc(50% - 108px);
}
.intro_bg_right
{
    flex: 1;
    background-image: url(../images/bg-intro-desktop.svg);
    background-repeat: no-repeat;
    position: relative;
    left: 15px;
    top: -265px;
}
.intro
{
    height: 656px;
    display: flex;
}

.intro .left
{
    flex: 1;
    display: flex;
    flex-direction: column;
    justify-content: center;
}

.intro .right
{
    flex: 1;
}


.intro .left h1
{
    font-size: 56px;
    font-weight: 300;
    color: #2D314D;
    margin-bottom: 24px;
}

.intro .left .text_style_1
{
    width: 447px;
}


.intro .left .standard_btn
{
    margin-top: 36px;
}


.intro .right img
{
    position: relative;
    top: -125px;
    left: 5px;
}

.why_container
{
    background-color: #F4F5F7;
}

.why_introduction
{
    width: 635px;
    margin-bottom: 72px;
}

.why_cards
{
    display: flex;
    justify-content: space-between;
}
.why_card
{
    width: 255px;
}

.card_title
{
    font-size: 24px;
    font-weight: 300;
    line-height: 28px;
    color: #2D314D;
    margin-bottom: 26px;
}

.why_card img
{
    margin-bottom: 40px;
}

.articles .standard_title
{
    margin-bottom: 40px;
}

.articles_cards
{
    display: flex;
    justify-content: space-between;
}

.articles_card
{
    width: 255px;
    background-color: #fff;
    text-decoration: none;
}

.articles_card img
{
    width: inherit;
    height: 200px;
    margin-bottom: 25px;
}

.articles_card .text_style_3, 
.articles_card .article_title
{
    margin-bottom: 8px;
}

.articles_card .text_style_4
{
    margin-bottom: 25px;
}

.article_title
{
    font-size: 16px;
    font-weight: 300;
    line-height: 20px;
    letter-spacing: -0.29px;
    color: #2D314D;
}

.articles_card:hover .article_title
{
    color: #30C88F;
}

.card_padding
{
    padding-left: 24px;
    padding-right: 24px;
}

footer
{
    background-color: #2D314D;
    padding-top: 48px;
    padding-bottom: 48px;
}

.footer
{
    display: flex;
}

.social_icons_container
{
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    justify-content: space-between;
    width: 255px;
    margin-right: 30px;
}

.social_icons_container > img
{
    object-fit: none;
}

.social_icons svg
{
    margin-right: 13px;
    fill: #fff;
    cursor: pointer;
}

.social_icons svg:hover
{
    fill: #30C88F;
}

.footer_menu
{
    display: flex;
    flex-direction: column;
    width: 160px;
    margin-right: 30px;

}

.footer_menu a
{
    width: fit-content;
    margin-bottom: 8px;
    text-decoration: none;
    color: #fff;
    font-size: 15px;
    line-height: 26px;
    letter-spacing: 0.23px;
}

.footer_menu a:hover
{
    color: #30C88F;
}

.footer_menu a:nth-last-child(1)
{
    margin-bottom: 0;
}

.footer_request_invite
{
    flex: 1;
    display: flex;
    flex-direction: column;
    align-items: flex-end;
    justify-content: space-between;
}

.rights
{
    font-size: 15px;
    font-weight: 400;
    line-height: 26px;
    letter-spacing: -0.23px;
    color: rgba(255, 255, 255, 0.5);
}

